@@ -1,22 +1,19 @@
 
-pkglib_LTLIBRARIES = lib_file_io.la	\
-                  lib_template_F0.la	\
-                  lib_template_F12.la	\
-                  lib_template_OP1.la	\
-                  lib_template_OP2.la	
 
-lib_template_F0_la_SOURCES = template_F0.cc template.hh
-lib_template_F0_la_LD_FLAGS = -module -avoid-version
+pkglib_LTLIBRARIES = file_io.la		\
+                  template_F0.la	\
+                  template_F12.la	\
+                  template_OP1.la	\
+                  template_OP2.la	
 
-lib_template_F12_la_SOURCES = template_F12.cc template.hh
-lib_template_F12_la_LD_FLAGS = -module -avoid-version
 
-lib_template_OP1_la_SOURCES = template_OP1.cc template.hh
-lib_template_OP1_la_LD_FLAGS = -module -avoid-version
+AM_LDFLAGS = -no-undefined -module -avoid-version -export-dynamic
 
-lib_template_OP2_la_SOURCES = template_OP2.cc template.hh
-lib_template_OP2_la_LD_FLAGS = -module -avoid-version
+file_io_la_SOURCES = file_io.cc
 
-lib_file_io_la_SOURCES = file_io.cc
-lib_file_io_la_LD_FLAGS = -module -avoid-version
+template_F0_la_SOURCES = template_F0.cc template.hh
+template_F12_la_SOURCES = template_F12.cc template.hh
+template_OP1_la_SOURCES = template_OP1.cc template.hh
+template_OP2_la_SOURCES = template_OP2.cc template.hh
+
 
